fix code blocks alignment

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,58 @@
+#main-doc {
+  display: grid;
+  grid-template-columns: 300px auto;
+  font-family: sans-serif;
+  font-weight: 300;
+}
+
+#navbar {
+
+}
+
+nav ul {
+  list-style: none;
+}
+
+nav li {
+  /* border-top: 1px; */
+  /* border-style: solid; */
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
+nav header {
+  margin-left: 40px;
+}
+
+.nav-link {
+  text-decoration: none;
+  font-size: 18px;
+  color: black;
+}
+
+.content {
+  margin: 10 20 20 20;
+}
+
+h1 {
+  font-weight: 500;
+}
+
+h2 {
+  font-weight: 400;
+}
+
+li {
+  line-height: 25px;
+}
+
+p {
+  line-height: 25px;
+}
+
 code {
   display: block;
-  white-space: pre-wrap
+  white-space: pre-wrap;
+  margin-left: 20px;
+  line-height: 25px;
 }
